--- a/styles/index.scss
+++ b/styles/index.scss
@@ -16,6 +16,26 @@
   border-left: solid 3px #F5F5F5;
   padding-top: 8px;
 }
+
+.page-block-content{
+
+  display: flex;
+  .img{
+
+  }
+  .content{
+    border-bottom: 1px solid #E0E0E0;
+    width: auto;
+    color: #262626;
+    font-weight: 500;
+    font-family: initial;
+    margin-left: 3px;
+  }
+}
+.my-click{
+  cursor: pointer;
+  user-select:none;
+}
 .menu{
   max-height: 30%;
   min-height: 30px;
@@ -27,6 +47,13 @@
   padding: 10px;
   z-index: 1000;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.selection-box {
+  position: absolute;
+  border: 2px dashed blue;
+  pointer-events: none; /* 不阻止鼠标事件 */
+  display: none; /* 初始隐藏 */
 }
 
 .list-title{
@@ -62,3 +89,4 @@
 .placeholder-div:not(:empty)::before {
   display: none;
 }
+
